<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:id="@+id/configuration_tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dip" >

        <TextView
            android:id="@+id/configuration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/configuration_notification"
            android:textColor="#FF3333" 
            android:fontFamily="Lucida"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF3333" />

    <TableRow
        android:id="@+id/configuration_tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:id="@+id/vibrate_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_weight="2"
            android:fontFamily="Lucida"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/configuration_vibrate" />

        <Switch
            android:id="@+id/switch_vibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:textOff="No"
            android:textOn="Si" />
        
    </TableRow>

    <TableRow
        android:id="@+id/configuration_tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:id="@+id/sound_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="2"
            android:fontFamily="Lucida"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/configuration_sound" />

        <Switch
            android:id="@+id/switch_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:textOff="No"
            android:textOn="Si" />

    </TableRow>

</TableLayout>