<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:id="@+id/my_pet_tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dip" >

        <Button
            android:id="@+id/button_change_pet_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Image"
			android:onClick="changeImage"/>

        <TextView
            android:id="@+id/my_pet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Lucy"
            android:fontFamily="Lucida"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:id="@+id/my_pet_tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:id="@+id/my_pet_important_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="Lucida"
            android:text="@string/my_pet_important_info"
            android:textColor="#FF3333"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF3333" />

    <TableRow
        android:id="@+id/my_pet_tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:id="@+id/textView_careful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="Lucida"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/checkbox_careful" />

        <CheckBox
            android:id="@+id/checkBox_careful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/my_pet_tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <TextView
            android:id="@+id/textView_vaccines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="Lucida"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/checkbox_vaccines" />

        <CheckBox
            android:id="@+id/checkBox_vaccines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </TableRow>

    <TableRow
        android:id="@+id/my_profile_tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dip"
        android:padding="5dip" >

        <TextView
            android:id="@+id/my_pet_extra_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/my_pet_extra_info"
            android:textColor="#FF3333"
            android:fontFamily="Lucida"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

    <View
        android:layout_height="2dip"
        android:background="#FF3333" />

    <TableRow
        android:id="@+id/my_pet_tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dip" >

        <EditText
            android:id="@+id/my_pet_extra_information"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1" 
            android:maxLines="2"
            android:maxLength="21"
            android:inputType="textCapSentences"/>
    </TableRow>

    <TableRow
        android:id="@+id/my_pet_tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >

        <Button
            android:id="@+id/button_resend_qr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:fontFamily="Lucida"
            android:onClick="resendQR"
            android:text="@string/my_pet_button_resend_qr" />
    </TableRow>

</TableLayout>